fixed whitespace textarea

--- a/forum_proj/style.css
+++ b/forum_proj/style.css
@@ -81,4 +81,4 @@ h1 {
     width: 120px;
     height: 120px;
 }
-
+.tdetails { white-space: pre-wrap; }
